--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
 cloudpickle==1.2.2
 cycler==0.10.0
-Cython==0.29
 dask==2.10.1
 decorator==4.4.1
 kiwisolver==1.1.0
@@ -12,11 +11,10 @@ olefile==0.46
 opencv-python==4.2.0.32
 Pillow==4.3.0
 pyparsing==2.4.6
-python-dateutil==2.8.1
 PyWavelets==1.1.1
-scikit-image==0.14.2
-scikit-learn==0.20.0
-scipy==1.0.0
+scikit-image
+scikit-learn
+scipy
 Shapely==1.6.4
 six==1.14.0
 sklearn==0.0
